web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__distinct__how-do-i-remove-duplicates__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nselect department\ngroup employees.* (\n  take 1\n)\n"
---
SELECT
  DISTINCT department
FROM
  employees
