web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__distinct__how-do-i-remove-duplicates__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\ngroup employees.* (take 1)\n"
snapshot_kind: text
---
SELECT
  DISTINCT *
FROM
  employees
